# fastapi-archetype

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  SUPPORT.md  config.yml  settings.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-failing-test.md  3-docs-bug.md  4-feature-request.md  5-enhancement-request.md  6-security-report.md  7-question-support.md
docker/: Dockerfile  docker-compose.yml
docs/: alembic.md  deployment.md  poetry.md  project-structure.md  recommend-extensions.md
src/: .env.example  app.py
src/api/: __init__.py  app.yaml  pagination.py
src/api/api_v1/: __init__.py
src/api/api_v1/endpoints/: createdb.py  customer.py  offices_api.py
src/api/api_v1/schemas/: customer.py  emails.py  error_message.py  error_message_data.py  example_data.py  user.py
src/api/endpoints/: createdb.py  offices_api.py
src/api/errors/: error_responses.py  exception_manager.py  exception_mapper.py  exceptions.py
src/api/responses/: error_responses.py  exception_manager.py  exception_mapper.py  exceptions.py
src/api/schemas/: error_message.py  error_message_data.py  example_data.py  example_data_data.py  example_response.py  example_response_data_inner.py  pagination.py  pagination_links.py  pagination_links_first.py  pagination_links_last.py  pagination_links_next.py  pagination_links_prev.py  post_examples_request.py  token.py  totp.py
src/controller/: __init__.py
src/controller/api/: __init__.py
src/controller/api/endpoints/: base.py  customer.py
src/controller/api/schemas/: customer.py  error_message.py
src/controller/errors/: error_responses.py  exception_manager.py  exception_mapper.py  exceptions.py
src/controller/utils/: pagination.py
src/core/: config.py  logger.py
src/db/: create_db.py  init_db.py  session.py
src/db/crud/: __init__.py  address.py  base.py  crud.py  crud_token.py  crud_user.py  customer.py
src/db/models/: __init__.py  base.py  customer.py  token.py  user.py
src/repository/: create_db.py  exceptions.py  session.py
src/repository/crud/: address.py  base.py  customer.py
src/repository/models/: customer.py
src/service/: customer_service.py  exceptions.py
src/service/application/: customer.py
src/service/customer/: service.py
src/tests/: conftest.py  test_offices_api.py  test_sectors_api.py  test_workstations_api.py  utils.py
