[tool.poetry]
authors = ["Pablo Jesús González Rubio <gonzrubio.pablo@gmail.com>"]
description = "FastAPI Production Archetype"
name = "src"
version = "0.1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
httpx = "^0.25.2"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
psycopg2-binary = "^2.9.5"
pydantic = { extras = ["email"], version = "^2.5.2" }
pydantic-settings = "^2.1.0"
pyjwt = { extras = ["crypto"], version = "^2.8.0" }
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.23"
sqlalchemy-utils = "^0.41.1"
uvicorn = "^0.24.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pre-commit = "^3.5.0"
isort = "^5.13.2"
pylance = "^0.9.2"
flake8 = "^6.1.0"
pylint = "^3.0.3"

[tool.ruff]
select = ["ALL"]
target-version = "py310"
line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 100

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
