[tool.poetry]
authors = ["Pablo Jesús González Rubio <gonzrubio.pablo@gmail.com>"]
description = "FastAPI Production Archetype"
name = "src"
version = "0.1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
fastapi = "^0.108.0"
httpx = "^0.25.2"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
psycopg2-binary = "^2.9.5"
pydantic = { extras = ["email"], version = "^2.5.2" }
pydantic-settings = "^2.1.0"
pyjwt = { extras = ["crypto"], version = "^2.8.0" }
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.23"
sqlalchemy-utils = "^0.41.1"
uvicorn = "^0.24.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pylance = "^0.10.5"
flake8 = "^7.0.0"
pylint = "^3.1.0"
pytest = "^8.1.1"
pre-commit = "^3.6.2"
poetry-plugin-export = "^1.7.1"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "BLE001",
    "COM812",
    "ISC001",
    "D100",
    "D104",
    "D105",
    "D107",
    "D205",
    "D211",
    "D212",
    "E203",
    "E266",
    "ANN101",
    "ANN102",
    "ANN204",
    "S602",
    "ERA001",
    "PLR0913",
]
target-version = "py310"
line-length = 100

[tool.flake8]
max-line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/controller/api/endpoints/customer.py" = ["N803", "B008"]
"src/repository/models/__init__.py" = ["N818", "F401"]


[tool.black]
line-length = 100

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
